estefania_fdez/session01/exercise03/wordpress-canary-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: wordpress
    track: canary
  name: wordpress-canary-deployment
  namespace: exercise-03
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        -
          image: "bitnami/wordpress:4.9.5"
      livenessProbe:
        httpGet: ~
        initialDelaySeconds: 15
        path: /wp-admin
        periodSeconds: 5
        port: http
      name: wordpress
      ports:
        -
          containerPort: 80
          name: wordpress
      readinessProbe:
        httpGet: ~
        initialDelaySeconds: 15
        path: /wp-admin
        port: http
