estefania_fdez/session01/exercise03/rds-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: rds-svc
   namespace: exercise-03
spec:
  # type: XXXX
  # ports: XXXX
  # selector: XXXX
  # ...
