estefania_fdez/session01/exercise03/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: exercise-03
  labels:
    app: wordpress
  annotations:
      nginx.ingress.kubernetes.io/affinity: cookie
spec:
  ports:
    - port: 80
  targetPort: 80
  selector:
      app: wordpress
